hphp/test/slow/array/ban_cast.php.expectf
Fatal error: (array) cast is no longer supported in %s/ban_cast.php on line 5
